# PlaneAR

./: .gitignore  BUILD.md  CONTRIBUTING.md  LICENSE  PR-Template  README.md  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: android-ci.yml  android-release.yml
app/: .gitignore  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/GraphicsEngine/: ArBridge.cpp  ArBridge.h  CMakeLists.txt  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsEngineJNI.cpp  Logger.h  README.md  main.cpp
app/src/main/cpp/GraphicsEngine/cmake/: CompileShaders.cmake
app/src/main/cpp/GraphicsEngine/components/assets/: AssetManager.cpp  AssetManager.h
app/src/main/cpp/GraphicsEngine/components/assets/fonts/: Font.cpp  Font.h
app/src/main/cpp/GraphicsEngine/components/commandBuffer/: CommandBuffer.cpp  CommandBuffer.h
app/src/main/cpp/GraphicsEngine/components/descriptorSet/: DescriptorSet.cpp  DescriptorSet.h
app/src/main/cpp/GraphicsEngine/components/framebuffers/: Framebuffer.h  SwapchainFramebuffer.h
app/src/main/cpp/GraphicsEngine/components/instance/: DebugMessenger.cpp  DebugMessenger.h  Instance.cpp  Instance.h
app/src/main/cpp/GraphicsEngine/components/logicalDevice/: LogicalDevice.cpp  LogicalDevice.h
app/src/main/cpp/GraphicsEngine/components/physicalDevice/: PhysicalDevice.cpp  PhysicalDevice.h
app/src/main/cpp/GraphicsEngine/components/pipelines/: GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineStates.h  Pipeline.cpp  Pipeline.h  PipelineConfig.h  PipelineManager.cpp  PipelineManager.h
app/src/main/cpp/GraphicsEngine/components/pipelines/implementations/: EllipsePipeline.cpp  EllipsePipeline.h  FontPipeline.cpp  FontPipeline.h  QuadPipeline.cpp  QuadPipeline.h  RectPipeline.cpp  RectPipeline.h  TrianglePipeline.cpp  TrianglePipeline.h
app/src/main/cpp/GraphicsEngine/components/pipelines/implementations/common/: GraphicsPipelineStates.h
app/src/main/cpp/GraphicsEngine/components/renderPass/: RenderPass.cpp  RenderPass.h
app/src/main/cpp/GraphicsEngine/components/renderer2D/: Renderer2D.cpp  Renderer2D.h
app/src/main/cpp/GraphicsEngine/components/renderingManager/: LegacyRenderer.cpp  Renderer.h  RenderingManager.cpp  RenderingManager.h
app/src/main/cpp/GraphicsEngine/components/renderingManager/renderer2D/: Renderer2D.cpp  Renderer2D.h
app/src/main/cpp/GraphicsEngine/components/shaderModule/: ShaderModule.h
app/src/main/cpp/GraphicsEngine/components/surface/: Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h
app/src/main/cpp/GraphicsEngine/components/textures/: GlyphTexture.cpp  GlyphTexture.h  Texture.cpp  Texture.h
app/src/main/cpp/GraphicsEngine/shaders/: ellipse.frag  ellipse.vert  font.frag  font.vert  rect.vert  ui.frag  ui.vert
app/src/main/cpp/GraphicsEngine/source/: CMakeLists.txt  GraphicsEngine.cpp  GraphicsEngine.h  JNIGraphicsBridge.cpp
app/src/main/cpp/GraphicsEngine/source/components/assets/: AssetManager.cpp  AssetManager.h
app/src/main/cpp/GraphicsEngine/source/components/assets/fonts/: Font.cpp  Font.h
app/src/main/cpp/GraphicsEngine/source/components/assets/textures/: CameraTexture.cpp  CameraTexture.h  GlyphTexture.cpp  GlyphTexture.h  ImageTexture.cpp  ImageTexture.h  Texture.cpp  Texture.h  VKCheck.h
app/src/main/cpp/GraphicsEngine/source/components/commandBuffer/: CommandBuffer.cpp  CommandBuffer.h  SingleUseCommandBuffer.cpp  SingleUseCommandBuffer.h
app/src/main/cpp/GraphicsEngine/source/components/descriptorSet/: DescriptorSet.cpp  DescriptorSet.h  UniformBuffer.cpp  UniformBuffer.h
app/src/main/cpp/GraphicsEngine/source/components/framebuffers/: Framebuffer.cpp  Framebuffer.h  MousePickingFramebuffer.cpp  MousePickingFramebuffer.h  SwapchainFramebuffer.cpp  SwapchainFramebuffer.h
app/src/main/cpp/GraphicsEngine/source/components/instance/: DebugMessenger.cpp  Instance.cpp
app/src/main/cpp/GraphicsEngine/source/components/logicalDevice/: LogicalDevice.cpp  LogicalDevice.h
app/src/main/cpp/GraphicsEngine/source/components/physicalDevice/: PhysicalDevice.cpp  PhysicalDevice.h
app/src/main/cpp/GraphicsEngine/source/components/pipelines/: GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineStates.h  PipelineConfig.h  PipelineManager.cpp  PipelineManager.h
app/src/main/cpp/GraphicsEngine/source/components/renderingManager/: LegacyRenderer.h  Renderer.cpp  Renderer.h  RenderingManager.cpp  RenderingManager.h
app/src/main/cpp/GraphicsEngine/source/components/renderingManager/renderer2D/: MousePicker.cpp  MousePicker.h  Primitives2D.h  Renderer2D.cpp  Renderer2D.h
app/src/main/cpp/GraphicsEngine/source/components/shaderModule/: ShaderModule.cpp
app/src/main/cpp/GraphicsEngine/source/components/surface/: Surface.cpp  Surface.h
app/src/main/cpp/GraphicsEngine/source/components/ui/: Button.cpp  Button.h  Label.cpp  Label.h  Widget.h
app/src/main/cpp/GraphicsEngine/source/shaders/: camera.frag  compass.frag  compass.vert  ellipse.vert  font.frag  font.vert  font3D.frag  font3D.vert  image.frag  image.vert  mousePicking.frag  mousePicking.vert  point.frag  point.vert  rect.frag  rect.vert
app/src/main/cpp/GraphicsEngine/source/utilities/: Images.h
app/src/main/cpp/GraphicsEngine/tests/: CMakeLists.txt
app/src/main/cpp/GraphicsEngine/tests/graphicsEngineTest/: CMakeLists.txt  main.cpp
app/src/main/cpp/GraphicsEngine/utilities/: Buffers.h  Images.h
app/src/main/cpp/source/: AppScenes.cpp  AppScenes.h  ArBridge.cpp  ArBridge.h  CMakeLists.txt  InputUtils.cpp  InputUtils.h  JNISceneBridge.cpp  JNISceneBridge.h  SceneIds.h  SceneSwitcher.cpp  SceneSwitcher.h  main.cpp
examples/: ADSBlolAPI.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
website/: README.md  gatsby-config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
website/src/components/: Capabilities.tsx  Documentation.tsx  Footer.tsx  Header.tsx  Hero.tsx  Layout.tsx  MaterialIcon.tsx  ProblemSolution.tsx  Seo.tsx  Team.tsx  ThemeToggle.tsx
website/src/context/: ThemeContext.tsx
(+62 files in other folders)
